[project]
name = "mping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hanabi-bro", email = "hanabi.bro@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "psutil>=6.1.1",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nuitka>=2.6.2",
    "zstandard>=0.23.0",
]
